@@ -13,6 +13,8 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Locale;
+import java.util.concurrent.TimeUnit;
 
 import am.ik.rontolisp.LispVal;
 import am.ik.rontolisp.eval.AppKitLibrary;
@@ -21,6 +23,7 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assumptions.assumeTrue;
 
 /**
  * The compiled {@code main} runs the program on a thread of its own, sized by
@@ -59,8 +62,20 @@ class JvmSizedMainTest {
 	}
 
 	private Result runInChildJvm(String lispCode, String className, String... jvmOptionsThenArgs) throws Exception {
+		return runInChildJvm(LispReader.readAllFromString(lispCode), className, jvmOptionsThenArgs);
+	}
+
+	private Result runInChildJvm(List<LispVal> program, String className, String... jvmOptionsThenArgs)
+			throws Exception {
 		Path dir = Files.createDirectories(this.tempDir.resolve(className));
-		Files.write(dir.resolve(className + ".class"), compile(lispCode, className));
+		JvmLispCompiler compiler = new JvmLispCompiler(className);
+		Files.write(dir.resolve(className + ".class"), compiler.compile(program));
+		// A bridge (objc:, java:) travels beside the class as files of its own.
+		for (var file : compiler.runtimeClassFiles().entrySet()) {
+			Path target = dir.resolve(file.getKey());
+			Files.createDirectories(target.getParent());
+			Files.write(target, file.getValue());
+		}
 		List<String> command = new ArrayList<>();
 		command.add(ProcessHandle.current().info().command().orElse("java"));
 		List<String> args = new ArrayList<>();
@@ -71,10 +86,19 @@ class JvmSizedMainTest {
 		command.add(dir.toString());
 		command.add(className);
 		command.addAll(args);
+		// Into files, not pipes: a program that hangs must fail the test, not hang it.
 		Path err = dir.resolve("stderr.txt");
-		Process process = new ProcessBuilder(command).redirectError(err.toFile()).start();
-		String out = new String(process.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
-		int exitCode = process.waitFor();
+		Path outFile = dir.resolve("stdout.txt");
+		Process process = new ProcessBuilder(command).redirectError(err.toFile())
+			.redirectOutput(outFile.toFile())
+			.start();
+		if (!process.waitFor(2, TimeUnit.MINUTES)) {
+			process.destroyForcibly().waitFor();
+			throw new AssertionError(command + " still running after 2 minutes; stdout:\n" + Files.readString(outFile)
+					+ "stderr:\n" + Files.readString(err));
+		}
+		String out = Files.readString(outFile, StandardCharsets.UTF_8);
+		int exitCode = process.exitValue();
 		// A JVMCI build (GraalVM) warns on -Xint that its compiler is off: the host's
 		// line, not the program's.
 		String programErr = Files.readAllLines(err)
@@ -166,24 +190,77 @@ class JvmSizedMainTest {
 		assertThat(methodNames(model)).contains("main", JvmSizedMainBuilder.BODY_METHOD, JvmSizedMainBuilder.RUN_METHOD,
 				"run");
 		assertThat(model.interfaces()).extracting(i -> i.asInternalName()).containsExactly("java/lang/Runnable");
+		assertThat(model.fields().stream().map(f -> f.fieldName().stringValue()))
+			.doesNotContain(JvmSizedMainBuilder.EXIT_FIELD);
 	}
 
 	@Test
-	void anObjcProgramKeepsItsMainOnThreadZero() {
-		// AppKit belongs to thread 0 (.kb/objc.md), and a GUI change is verified only by
-		// hand on macOS: a program that reaches objc: -- raw, or through the spliced
-		// appkit layer -- keeps the main it had, with no launcher anywhere in the class.
+	void anObjcProgramGetsTheLauncherThatCanHandThreadZeroOver() {
+		// A program that reaches objc: -- raw, or through the spliced appkit layer --
+		// runs on the worker like any other, and its main first asks the program's own
+		// MainThread whether thread 0 must be handed to the run loop (.kb/objc.md).
 		for (List<LispVal> program : List.of(LispReader.readAllFromString("(print (objc:class \"NSObject\"))"),
 				AppKitLibrary.process(LispReader.readAllFromString("""
 						(appkit:wait (appkit:window "t" :width 10 :height 10))
 						""")))) {
-			ClassModel model = ClassFile.of().parse(new JvmLispCompiler("SizedObjc").compile(program));
-			assertThat(methodNames(model)).contains("main")
-				.doesNotContain(JvmSizedMainBuilder.BODY_METHOD, JvmSizedMainBuilder.RUN_METHOD, "run");
-			assertThat(model.interfaces()).isEmpty();
-			assertThat(new String(new JvmLispCompiler("SizedObjc").compile(program), StandardCharsets.ISO_8859_1))
-				.doesNotContain(JvmSizedMainBuilder.STACK_PROPERTY);
+			byte[] bytes = new JvmLispCompiler("SizedObjc").compile(program);
+			ClassModel model = ClassFile.of().parse(bytes);
+			assertThat(methodNames(model)).contains("main", JvmSizedMainBuilder.BODY_METHOD,
+					JvmSizedMainBuilder.RUN_METHOD, "run");
+			assertThat(model.fields().stream().map(f -> f.fieldName().stringValue()))
+				.contains(JvmSizedMainBuilder.EXIT_FIELD);
+			assertThat(new String(bytes, StandardCharsets.ISO_8859_1))
+				.contains(JvmObjcRuntimeBuilder.mainThreadName("SizedObjc"), "handOverRequired", "runLoop");
 		}
+	}
+
+	@Test
+	void onThreadZeroAnObjcProgramParksItInTheRunLoopAndRunsOnTheWorker() throws Exception {
+		// What a native image's main is, simulated on the JVM: -XstartOnFirstThread runs
+		// main on thread 0 with nothing parked there, and the image property makes the
+		// program's MainThread answer that thread 0 must be handed over. A timer fires
+		// only while thread 0 runs its run loop: without the hand-over the program runs
+		// ON thread 0 and waits for it forever.
+		assumeMac();
+		Result handedOver = runAppKitInChildJvm(TIMER_PROGRAM + "(print :fired)", "SizedHandOver", HAND_OVER_OPTIONS);
+		assertThat(handedOver.err()).isEmpty();
+		assertThat(handedOver.out()).isEqualTo(":FIRED");
+		assertThat(handedOver.exitCode()).isZero();
+	}
+
+	@Test
+	void aHandedOverWorkerStillReportsAnUncaughtConditionAndExitsOne() throws Exception {
+		// Thread 0 never leaves the run loop, so the worker ends the process: the report,
+		// the echo naming thread "main" and exit code 1 are the launcher's own.
+		assumeMac();
+		Result failed = runAppKitInChildJvm(TIMER_PROGRAM + "(print 1) (error \"boom: ~a\" 42)", "SizedHandOverFail",
+				HAND_OVER_OPTIONS);
+		assertThat(failed.out()).isEqualTo("1");
+		assertThat(failed.err()).isEqualTo("""
+				Unhandled condition: boom: 42
+				Exception in thread "main" java.lang.RuntimeException: boom: 42
+				""");
+		assertThat(failed.exitCode()).isEqualTo(1);
+	}
+
+	/** Waits for one tick of an {@code appkit:timer}, which opens no window. */
+	private static final String TIMER_PROGRAM = """
+			(defvar *fired* nil)
+			(appkit:timer 0.05 (lambda () (setq *fired* t) nil))
+			(loop until *fired* do (sleep 0.05))
+			""";
+
+	private Result runAppKitInChildJvm(String appkitCode, String className, String... jvmOptionsThenArgs)
+			throws Exception {
+		return runInChildJvm(AppKitLibrary.process(LispReader.readAllFromString(appkitCode)), className,
+				jvmOptionsThenArgs);
+	}
+
+	private static final String[] HAND_OVER_OPTIONS = { "-XstartOnFirstThread",
+			"-Dorg.graalvm.nativeimage.imagecode=runtime", "--enable-native-access=ALL-UNNAMED" };
+
+	private static void assumeMac() {
+		assumeTrue(System.getProperty("os.name", "").toLowerCase(Locale.ROOT).contains("mac"), "objc: needs macOS");
 	}
 
 	@Test
